--- a/styleresponsive.css
+++ b/styleresponsive.css
@@ -1,5 +1,5 @@
 @media all and (min-width: 1921px) {
-    body{
+    body {
         max-width: 1800px;
         margin: auto;
     }
@@ -110,16 +110,16 @@
     body {
         padding-left: 0px;
         padding-right: 0px;
-        margin: 10px;
+        margin-left: 10px;
+        margin-right:0px;
     }
     #navigation {
-        margin-left: -5px;
-        margin-right: -5px;
+        margin-left: -10px;
+        margin-right: 0px;
     }
     #topbar {
         flex-direction: column-reverse;
     } 
-
 
     .lodgingpicture {
         min-height: 200px;
@@ -133,13 +133,24 @@
     }
 
     #popularlodging {
+        width:100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         align-items: center;
-        padding:0px;
-        margin-right: -10px;
-        margin-left: -10px;
         padding: 10px;
+        padding-right:0px;
+        margin-right: -20px;
+        margin-left: -10px;
         border-radius: 0px;
     }
+
+    #searchbar {
+        width: 90%;
+    }
+    #searchbuttonbox {
+    }
+    
 
     #activities {
         flex-direction: row;
@@ -150,9 +161,23 @@
         padding-bottom: 20px;
     }
 
+    .popularlodgingcard {
+        width:95%;
+        display: flex; 
+        flex-direction: row;
+        margin: 10px;
+        margin-left: 0px;
+        margin-bottom: 10px;
+        padding: 2px;
+        background-color: white;
+        border-radius: 20px;
+    }
+    
     footer {
+        width: 100%;
         margin-top: 30px;
         margin: -30px;
+        /* margin-right: -1000px; */
         padding-bottom: 30px
     }
 
